# compstat-research

./: .gitignore  404.html  CITATION.cff  LICENSE  Makefile  README.md  index.html  juanico_hdx_compstat_eda.ipynb  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
compstat_research/: __init__.py  config.py  dataset.py  features.py  plots.py
compstat_research/modeling/: predict.py  train.py
data/processed/: climate_change_pivot.csv
data/processed/cds/: era5-2m-temperature-1940-2024.parquet
data/processed/cds/era5/2m-temperature/global/: era5-2m-temperature-global-daily-avg.parquet  era5-2m-temperature-global-yearly-avg.parquet
data/processed/cds/era5/multivars-ph/: 2m_dewpoint_temperature_stream-oper_daily-mean.parquet  2m_temperature_0_daily-mean.parquet  sea_surface_temperature_0_daily-mean.parquet  surface_net_solar_radiation_0_daily-mean.parquet  total_cloud_cover_0_daily-mean.parquet  total_precipitation_0_daily-mean.parquet
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 1.0-iragca-cds-data.ipynb  1.1-iragca-cds-data-eda.ipynb  1.1-iragca-multivars-agg.ipynb  1.1.1-iragca-multivars-eda.ipynb  2.0-iragca-road-traffic-data.ipynb  3.0-iragca-ph-major-cities-weather-data.ipynb  4.0-iragca-climate_change_pivot-eda.ipynb  5.0-iragca-monte-carlo-test.ipynb  6.0-iragca-climate-models.ipynb  7.0-iragca-gtd.ipynb  7.0-iragca-mc-heuristic.ipynb
search/: search_index.json
