[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "compstat_research"
version = "0.0.1"
description = "A repo for our group research project"
authors = [
  { name = "Chris Andrei Irag", email = "chrisandrei.irag@1.ustp.edu.ph" },
  { name = "Hernel Juanico", email = "hernel.juanico@1.ustp.edu.ph" },
  { name = "Frency Rayne Montesclaros", email = "montesclaros.frency17@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
requires-python = "~=3.10"
dependencies = [
    "duckdb>=1.2.0",
    "pyarrow>=19.0.0",
    "timeout-decorator>=0.5.0",
]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["compstat_research"]
force_sort_within_sections = true

[tool.uv.sources]
compstat-research = { workspace = true }

[dependency-groups]
dev = [
    "compstat-research",
]
