[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "compstat_research"
version = "0.0.1"
description = "A repo for our group research project"
authors = [
  { name = "Chris Andrei Irag", email = "chrisandrei.irag@1.ustp.edu.ph" },
  { name = "Hernel Juanico", email = "hernel.juanico@1.ustp.edu.ph" },
  { name = "Frency Rayne Montesclaros", email = "montesclaros.frency17@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
requires-python = "~=3.10"
dependencies = [
    "cdsapi>=0.7.5",
    "csapi>=0.0.8",
    "dotenv>=0.9.9",
    "duckdb>=1.2.0",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "netcdf4>=1.7.2",
    "polars>=1.23.0",
    "pyarrow>=19.0.0",
    "seaborn>=0.13.2",
    "timeout-decorator>=0.5.0",
    "tqdm>=4.67.1",
    "xarray>=2025.1.2",
]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["compstat_research"]
force_sort_within_sections = true

[tool.uv.sources]
compstat-research = { workspace = true }

[dependency-groups]
dev = [
    "compstat-research",
]
